--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -26,7 +26,7 @@ div.innerHTML = div.innerHTML +"<div>"+JSON.stringify(data)+"</div>";
   if (i > 20){
     
     $("#data").find('div:first').css("color","green")
-  $("#data").find('div:first').slideOutOut(300, function(){ $(this).remove();});
+  $("#data").find('div:first').fadeOut(300, function(){ $(this).remove();});
   }
 });
 }
