--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -16,10 +16,10 @@ $( document ).ready(function() {
     $.get( "/p/"+i.toString(), function( data ) {
   console.log(i);
   console.log(data);
-  var html_str = $("#data").html();
-        console.log(html_str);
-        html_str  += "<div>"+JSON.stringify(data)+"</div>";
-        $("#div").html(html_str);
+  //var html_str = $("#data").html();
+        //console.log(html_str);
+      var  html_str  += "<div>"+JSON.stringify(data)+"</div>";
+        $("#div").append(html_str);
   //var div = $('#data');
 //div.innerHTML = div.innerHTML +"<div>"+JSON.stringify(data)+"</div>";
   i = i+1;
