--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -18,7 +18,7 @@ $( document ).ready(function() {
   console.log(data);
   //var html_str = $("#data").html();
         //console.log(html_str);
-      var  html_str  += "<div>"+JSON.stringify(data)+"</div>";
+      var  html_str  = "<div>"+JSON.stringify(data)+"</div>";
         $("#div").append(html_str);
   //var div = $('#data');
 //div.innerHTML = div.innerHTML +"<div>"+JSON.stringify(data)+"</div>";
