--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -19,7 +19,7 @@ $( document ).ready(function() {
   //var html_str = $("#data").html();
         //console.log(html_str);
       var  html_str  = "<div>"+JSON.stringify(data)+"</div>";
-        $("#div").append(html_str);
+        $("#data").append(html_str);
   //var div = $('#data');
 //div.innerHTML = div.innerHTML +"<div>"+JSON.stringify(data)+"</div>";
   i = i+1;
